--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import-normalize;
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@font-face {
+  font-family: "IBMbold";
+  src: local("IBM"),
+    url("./assets/fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "IBMreg";
+  src: local("IBM"),
+    url("./assets/fonts/IBM_Plex_Sans/IBMPlexSans-Regular.ttf") format("truetype");
+}
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body { 
+margin: 0; 
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; 
+-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; } 
+ul, nav{ 
+list-style: none; 
+padding: 0; 
+margin: 0;} 
+h1, h2, h3, h4, h5, h6, p{ 
+margin: 0; } 
+a { 
+text-decoration: none; } 
+input{ 
+box-sizing: border-box; }
+img{
+    display: block;
+box-sizing: border-box; }
